panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__struct__test_struct_completed_in_parameter_list_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid application of `sizeof` to incomplete type `struct X~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c:4:5]
   │
 4 │     sizeof *f(nullptr);
   │     ─────────┬────────  
   │              ╰────────── in this expression
───╯

Error: dereference of pointer to incomplete type `struct X~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c:4:13]
   │
 4 │     sizeof *f(nullptr);
   │             ─────┬────  
   │                  ╰────── this expression has type `ptr<struct X~2>`
───╯

Error: cannot declare variable `incomplete_here` with incomplete type `struct X~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c:7:14]
   │
 7 │     struct X incomplete_here = {};
   │              ───────┬───────  
   │                     ╰───────── declared here
───╯

Error: cannot initialise variable of incomplete type `struct X~2`
   ╭─[panko/tests/cases/execute/struct/test_struct_completed_in_parameter_list_decl.c:7:32]
   │
 7 │     struct X incomplete_here = {};
   │     ────┬─── ───────┬───────   ─┬  
   │         │           │           ╰── cannot initialise variable of incomplete type
   │         │           │              
   │         │           ╰────────────── while defining this variable
   │         │                          
   │         ╰────────────────────────── `struct X~2` is incomplete
───╯
